[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/wizard.gd" type="Script" id=1]
[ext_resource path="res://assets/blueWizard.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 16.0

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.10498, 0.671875, 0.193558, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="wizard" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.713098, 0, 0, 0.596933, -3.51469, -9.58109 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.001
script/script = ExtResource( 1 )

[node name="wizardSprite" type="Sprite" parent="."]

transform/pos = Vector2( -3.94334, -36.924 )
texture = ExtResource( 2 )
hframes = 6

[node name="wizardColl" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -3.51469, -9.58109 )
transform/scale = Vector2( 0.713098, 0.596933 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer_fire" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="Timer_ice" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="Timer_shock" type="Timer" parent="."]

process_mode = 1
wait_time = 8.0
one_shot = true
autostart = false

[node name="Timer_burn" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Timer_freeze" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="Timer_stun" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="healthBar" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -39.0
margin/top = -96.0
margin/right = 41.0
margin/bottom = -80.0
custom_styles/fg = SubResource( 3 )
custom_colors/font_color = Color( 0.522095, 0.522095, 0.734375, 1 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[connection signal="timeout" from="Timer_fire" to="." method="_on_Timer_fire_timeout"]

[connection signal="timeout" from="Timer_ice" to="." method="_on_Timer_ice_timeout"]

[connection signal="timeout" from="Timer_shock" to="." method="_on_Timer_shock_timeout"]

[connection signal="timeout" from="Timer_burn" to="." method="_on_Timer_burn_timeout"]

[connection signal="timeout" from="Timer_freeze" to="." method="_on_Timer_freeze_timeout"]

[connection signal="timeout" from="Timer_stun" to="." method="_on_Timer_stun_timeout"]


